# erdettorsdag-rs

./: Cargo.toml  Dockerfile
.github/workflows/: release.yml  test.yml
src/: main.rs
templates/: index.html
